--- a/htmlo/basic6.html
+++ b/htmlo/basic6.html
@@ -1,8 +1,8 @@
-<ldoctype html> <l-- loveKorea.html -->
-<html lang="ko">
+<ldoctype html>
+<html>
 <head>
 <meta charset="utf-8"/>
-<title>타이틀 표제</title>
+<title>제목</title>
 </head>
 <body>
 <h1>애국가</h1>
