--- a/htmlo/basic8.html
+++ b/htmlo/basic8.html
@@ -1,4 +1,4 @@
-<ldoctype html> <!-- globalAttribute.html -->
+<!doctype html> <!-- globalAttribute.html -->
 <html lang="ko">
 <head>
 <meta charset="utf-8"/>
