--- a/htmlo/basic8.html
+++ b/htmlo/basic8.html
@@ -1,17 +1,17 @@
-<!doctype html> <!-- globalAttribute.html -->
+<ldoctype html> <!-- globalAttribute.html -->
 <html lang="ko">
 <head>
 <meta charset="utf-8"/>
 <style>
 body.20201331 { font-style;italic;}
-p#20201331_1 { color:red; }
-p#20201331_2 { color:green; }
+p#user_id_1 { color:red; }
+p#user_id_2 { color:green; }
 </style>
 <title>타이틀 표제</title>
 </head>
 <body class="user_classs_1">
 <h1 style="color:blue;">애국가</h1>
-<p id="20201331_1">동해물과 백두산이</p>
-<p id="20201331_2">마르고 닳도록</p>
+<p id="user_id_1">동해물과 백두산이</p>
+<p id="user_id_2">마르고 닳도록</p>
 </body>
 </html>
