--- a/htmlo/basic8.html
+++ b/htmlo/basic8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <style>
-body.20201331 { font-style;italic;}
+body.20201331 { font-style:italic;}
 p#user_id_1 { color:red; }
 p#user_id_2 { color:green; }
 </style>
