--- a/htmlo/bodyBasic.html
+++ b/htmlo/bodyBasic.html
@@ -8,7 +8,7 @@ document.getElementByld("id_1").innerHTML
 ="로딩하면서 실행";
 }
 </script>
-<title>문서 타이틀 표제</title>
+<title>타이틀 표제</title>
 </head>
 <body onload="eventonload()">
 <p>클릭</p>
