--- a/HTML로/bodyBasic.html
+++ b/HTML로/bodyBasic.html
@@ -1,16 +1,16 @@
-<!doctype html>	<!-- def.html -->
-<html>
- <head>
-	<meta charset="utf-8"/>
-	<title>제목</title>
+<!doctype html>	<!-- bodyBasic.html -->
+<html lang="ko">
+<head>
+ <meta charset="utf-8"/>
+ <script>
+   function eventonload() {
+    document.getElementByld("id_1").innerHTML="로딩하면서 실행";
+}
+</script>
+<title>타이틀 표제</title>
 </head>
-<body>
-<p>
-공공데이터 포털이동은	
-<a href="http://www.data.go.kr">
-여기
-</a>
-를 클릭하세요!
-</p>
+<body onload="eventonload()">
+  <p>클릭</p>
+  <p id="id_1">메시지표시</p>
 </body>
 </html>
