--- a/tableSpan.html
+++ b/tableSpan.html
@@ -2,9 +2,9 @@
 <html lang="ko">
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>table, tr, th, td {
-border: 1ps solid black;	border-collapse: collapse;
+border: 1px solid black;	border-collapse: collapse;
 }
-</style><!-- border-collapse: collapse 단선으로, 반대는 sparate -->
+</style><!-- border-collapse: collapse 단선으로, 반대는 separate -->
 <title>HTML5 테이블 스팬 실습</title></head>
 <body>
 <table>
